--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -58,7 +57,6 @@
   }
 }
 
-
 @layer base {
   * {
     @apply border-border;
@@ -68,7 +66,6 @@
     @apply bg-background text-foreground;
   }
 }
-
 
 iframe {
   color-scheme: normal;
@@ -90,4 +87,15 @@ body {
 
 .link {
   color: blue;
+}
+
+@function color($color-name) {
+  @return hsl(var(--#{$color-name}));
+}
+
+.flex-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
 }
